--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -35,7 +35,11 @@ h6 {
 p {
   font-size: 16px;
   line-height: 1.5;
-
+font-family: 'Cabin',
+'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif;
   margin: 0 0 25px;
   @media(min-width: 768px) {
     font-size: 18px;
@@ -49,7 +53,11 @@ a {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-
+font-family: 'Cabin',
+'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif;
   color: $primary;
   &:focus,
   &:hover {
